--- a/src/styles/partials/_resets.scss
+++ b/src/styles/partials/_resets.scss
@@ -14,5 +14,5 @@ body {
   font-size: 1.6rem;
   margin: 0;
   font-family: "lalo", sans-serif;
-  background-color: $off-white;
+  background-color: $primary-background;
 }
