--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -13,3 +13,9 @@
     url("../../assets/fonts/Adhesion-Regular.woff2") format("woff2");
   font-weight: 400;
 }
+
+@font-face {
+  font-family: recoleta;
+  src: url("../../assets/fonts/recoleta-regulardemo.otf") format("opentype");
+  font-weight: 400;
+}
