--- a/src/components/Cursor/Cursor.scss
+++ b/src/components/Cursor/Cursor.scss
@@ -5,8 +5,8 @@
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
-  background-color: $purple-2;
-  background-color: $green;
+  background-color: $black;
+  background-color: $orange;
   transform: translate(-50%, -50%);
   pointer-events: none;
   z-index: 100;
