general adjustemnts + add contract details

--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,6 +1,5 @@
 @use "../../styles/partials/variables" as *;
-
-@use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
 .hero {
   display: flex;
