--- a/src/components/Cursor/Cursor.scss
+++ b/src/components/Cursor/Cursor.scss
@@ -5,9 +5,9 @@
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
-  background-color: $black;
-  background-color: $orange;
+  background-color: $accent;
   transform: translate(-50%, -50%);
   pointer-events: none;
   z-index: 100;
+  mix-blend-mode: difference;
 }
