--- a/src/pages/ContractPage/ContractPage.scss
+++ b/src/pages/ContractPage/ContractPage.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   color: $primary-text;
   margin: 0 4rem;
+  gap: 1rem;
 
   &__titles {
     display: flex;
@@ -40,11 +41,59 @@
   &__subtitles {
     display: flex;
     gap: 2rem;
+    border-bottom: 1px solid $white;
   }
 
   &__subtitle {
     font-size: 1.5rem;
     padding: 1rem;
     border: 1px solid $white;
+  }
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+
+  &__title {
+    padding: 0.5rem 1rem;
+    margin: 1.5rem 0;
+
+    border-left: 1px solid $white;
+  }
+
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+  }
+
+  &__item {
+    display: flex;
+  }
+
+  &__sub {
+    opacity: 0.5;
+    border-left: 1px solid $white;
+    padding: 0 1rem;
+  }
+
+  &__text {
+  }
+}
+
+.gpt {
+  display: flex;
+  flex-direction: column;
+
+  &__wrapper {
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+  }
+
+  &__title {
+    padding: 0.5rem 1rem;
+    margin: 1.5rem 0;
+    border-left: 1px solid $white;
   }
 }
