--- a/src/pages/ContractPage/ContractPage.scss
+++ b/src/pages/ContractPage/ContractPage.scss
@@ -58,8 +58,14 @@
   &__title {
     padding: 0.5rem 1rem;
     margin: 1.5rem 0;
-
     border-left: 1px solid $white;
+  }
+
+  &__loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 2rem;
   }
 
   &__wrapper {
@@ -89,6 +95,12 @@
 
   &__wrapper {
     border-top: 1px solid rgba(255, 255, 255, 0.5);
+  }
+
+  &__loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__title {
