--- a/src/components/ContractAccord/ContractAccord.scss
+++ b/src/components/ContractAccord/ContractAccord.scss
@@ -7,10 +7,35 @@
 }
 
 .gpt {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 2rem;
+
   &__button {
     padding: 1rem;
+    width: 100%;
     border: none;
     font-family: lalo;
     font-size: 1.6rem;
+    border: 1px solid $white;
+    background: transparent;
+    color: $primary-text;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+      background-color: $off-white-2;
+      color: $black;
+      scale: 0.95;
+      cursor: pointer;
+    }
+
+    &:active {
+      background-color: $black;
+      color: $off-white-2;
+      scale: 0.9;
+      cursor: pointer;
+    }
   }
 }
