--- a/src/pages/ContractPage/ContractPage.scss
+++ b/src/pages/ContractPage/ContractPage.scss
@@ -1,13 +1,31 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles//partials//mixins" as *;
 
-.ball__video {
-  position: absolute;
-  top: 12rem;
-  left: -55rem;
+.gem {
+  position: fixed;
+  top: -27rem;
+  left: 60rem;
   z-index: -1;
   transform: rotate(90deg);
-  filter: blur(5rem) grayscale(100%);
+  filter: blur(0rem) grayscale(100%);
+}
+
+.core {
+  position: fixed;
+  top: 22rem;
+  left: -67rem;
+  z-index: -1;
+  transform: rotate(90deg);
+}
+
+.waves {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.5;
 }
 
 .contract {
