add basic status dynamics

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -7,8 +7,6 @@
   border: 1px solid $off-white-2;
   margin: 2rem 4rem;
   color: $primary-text;
-
-  &__text {
-    font-size: 1rem;
-  }
+  font-size: 1.3rem;
+  font-weight: bold;
 }
