--- a/src/pages/TransactionPage/TransactionPage.scss
+++ b/src/pages/TransactionPage/TransactionPage.scss
@@ -1,2 +1,104 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
+@use "../../styles/partials/variables" as *;
+@use "../../styles//partials//mixins" as *;
+
+.txn {
+  display: flex;
+  flex-direction: column;
+  color: $primary-text;
+  margin: 0 4rem;
+  gap: 5rem;
+  position: relative;
+
+  &__burst {
+    position: absolute;
+    z-index: -1;
+    top: -10rem;
+    left: -10rem;
+    opacity: 0.2;
+    filter: grayscale(100%) blur(0.25rem);
+  }
+
+  &__titles {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__top {
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+  }
+
+  &__icon {
+    width: 5rem;
+    height: 5rem;
+    // border-radius: 50%;
+    // background-color: $accent
+    // color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__title {
+    font-family: recoleta;
+    font-weight: lighter;
+    display: flex;
+    margin: 0;
+    font-size: 7rem;
+  }
+
+  &__subtitles {
+    display: flex;
+    gap: 2rem;
+    border-bottom: 1px solid $white;
+  }
+
+  &__subtitle {
+    font-size: 1.5rem;
+    padding: 1rem;
+    border: 1px solid $white;
+  }
+}
+
+.pre {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.status {
+  &__wrapper {
+    display: flex;
+    align-items: center;
+  }
+
+  &__sub {
+    opacity: 0.5;
+    border-left: 1px solid $white;
+    padding: 0 1rem;
+  }
+
+  &__icon {
+    margin-left: 1rem;
+  }
+
+  &__icon--tick {
+  }
+}
+
+.pregas {
+  &__wrapper {
+    display: flex;
+    align-items: center;
+  }
+
+  &__sub {
+    opacity: 0.5;
+    border-left: 1px solid $white;
+    padding: 0 1rem;
+  }
+}
