fixed status logic + start input explain

--- a/src/pages/TransactionPage/TransactionPage.scss
+++ b/src/pages/TransactionPage/TransactionPage.scss
@@ -11,14 +11,21 @@
   gap: 5rem;
   position: relative;
 
-  &__burst {
+  &__graphic {
     position: absolute;
     z-index: -1;
-    top: -10rem;
-    left: -10rem;
-    opacity: 0.2;
-    filter: grayscale(100%) blur(0.25rem);
+    top: -48rem;
+    right: 22rem;
   }
+
+  // &__graphic {
+  //   position: absolute;
+  //   z-index: -1;
+  //   top: -10rem;
+  //   left: -10rem;
+  //   // opacity: 0.2;
+  //   filter: grayscale(0%);
+  // }
 
   &__titles {
     display: flex;
@@ -33,11 +40,10 @@
   }
 
   &__icon {
-    width: 5rem;
-    height: 5rem;
-    // border-radius: 50%;
-    // background-color: $accent
-    // color: white;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    background-color: $accent;
     display: flex;
     justify-content: center;
     align-items: center;
