--- a/src/pages/TransactionPage/TransactionPage.scss
+++ b/src/pages/TransactionPage/TransactionPage.scss
@@ -16,6 +16,23 @@
     right: 22rem;
   }
 
+  &__burst {
+    position: fixed;
+    z-index: -1;
+    top: 24rem;
+    left: 11rem;
+    filter: grayscale(100%);
+  }
+
+  // &__sand {
+  //   position: fixed;
+  //   z-index: -1;
+  //   top: -3rem;
+  //   left: -15rem;
+  //   transform: rotate(43deg);
+  //   filter: grayscale(100%);
+  // }
+
   // &__graphic {
   //   position: absolute;
   //   z-index: -1;
@@ -81,8 +98,11 @@
   &__wrapper {
     display: flex;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.8);
+    // background-color: rgba(0, 0, 0, 0.9);
     border: 1px solid rgb(55 55 55);
+    background: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(0.4rem);
+    -webkit-backdrop-filter: blur(0.4rem);
     padding: 0 2rem;
     gap: 4rem;
   }
@@ -124,8 +144,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.8);
   border: 1px solid rgb(55 55 55);
+  background: rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(0.4rem);
+  -webkit-backdrop-filter: blur(0.4rem);
   padding: 0 2rem;
 
   &__details {
@@ -208,15 +230,19 @@
   }
 
   &__sent {
-    background-color: rgba(0, 0, 0, 0.7);
     border: 1px solid rgb(55 55 55);
+    background: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(0.4rem);
+    -webkit-backdrop-filter: blur(0.4rem);
     padding: 0 2rem;
     width: 50%;
   }
 
   &__used {
-    background-color: rgba(0, 0, 0, 0.7);
     border: 1px solid rgb(55 55 55);
+    background: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(0.4rem);
+    -webkit-backdrop-filter: blur(0.4rem);
     padding: 0 2rem;
     width: 50%;
   }
@@ -286,8 +312,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.8);
     border: 1px solid rgb(55 55 55);
+    background: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(0.4rem);
+    -webkit-backdrop-filter: blur(0.4rem);
     padding: 0 2rem;
   }
 
