--- a/src/pages/WalletPage/WalletPage.scss
+++ b/src/pages/WalletPage/WalletPage.scss
@@ -1,2 +1,136 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
+
+.wallet {
+  display: flex;
+  flex-direction: column;
+  color: $primary-text;
+  margin: 0 4rem;
+  gap: 3rem;
+  position: relative;
+
+  &__graphic {
+    position: absolute;
+    z-index: -1;
+    top: -48rem;
+    right: 22rem;
+  }
+
+  &__burst {
+    position: fixed;
+    z-index: -1;
+    top: 24rem;
+    left: 11rem;
+    filter: grayscale(100%);
+  }
+
+  &__sand {
+    position: fixed;
+    z-index: -1;
+    top: -3rem;
+    left: -15rem;
+    transform: rotate(43deg);
+    filter: grayscale(100%);
+  }
+
+  &__titles {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__top {
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+  }
+
+  &__icon {
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    background-color: $accent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__title {
+    font-family: recoleta;
+    font-weight: lighter;
+    display: flex;
+    margin: 0;
+    font-size: 7rem;
+  }
+
+  &__subtitles {
+    display: flex;
+    gap: 2rem;
+    border-bottom: 1px solid $white;
+  }
+
+  &__subtitle {
+    font-size: 1.5rem;
+    padding: 1rem;
+    border: 1px solid $white;
+  }
+}
+
+.data {
+  display: flex;
+  flex-direction: column;
+
+  &__title {
+    padding: 0.5rem 1rem;
+    margin: 1.5rem 0;
+    border-left: 1px solid $white;
+  }
+
+  &__loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 2rem;
+  }
+
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+  }
+
+  &__item {
+    display: flex;
+    padding: 0 1rem;
+  }
+
+  &__sub {
+    opacity: 0.5;
+    border-left: 1px solid $white;
+    padding: 0 1rem;
+  }
+
+  &__text {
+  }
+}
+
+.nft {
+  &__title {
+    padding: 0.5rem 1rem;
+    margin: 1.5rem 0;
+    border-left: 1px solid $white;
+  }
+
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  &__item {
+    display: flex;
+    gap: 2rem;
+    padding: 0 1rem;
+  }
+}
