--- a/src/components/ContractAccord/ContractAccord.scss
+++ b/src/components/ContractAccord/ContractAccord.scss
@@ -40,4 +40,13 @@
       cursor: pointer;
     }
   }
+
+  &__response {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+  }
+
+  &__code {
+    font-family: lalo;
+  }
 }
