add simple response functionality

--- a/src/components/ContractAccord/ContractAccord.scss
+++ b/src/components/ContractAccord/ContractAccord.scss
@@ -20,6 +20,7 @@
     font-family: lalo;
     font-size: 1.6rem;
     color: $primary-text;
+    outline: none;
     transition: all 0.2s ease-in-out;
     border: 1px solid rgb(55 55 55);
     background: rgba(0, 0, 0, 0.25);
