--- a/src/pages/AboutPage/AboutPage.scss
+++ b/src/pages/AboutPage/AboutPage.scss
@@ -3,23 +3,117 @@
 .about {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  color: $primary-text;
+  margin: 0 4rem;
+  gap: 2rem;
+
+  &__titles {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__top {
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+  }
+
+  &__circle {
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    background-color: $accent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   &__title {
-    font-size: 2rem;
+    font-family: recoleta;
     font-weight: lighter;
-    color: $primary-text;
-    margin-bottom: 2rem;
+    display: flex;
+    margin: 0;
+    font-size: 7rem;
+  }
+
+  &__subtitles {
+    display: flex;
+    gap: 2rem;
     border-bottom: 1px solid $white;
   }
 
+  &__tech {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+  }
+
+  &__subtitle {
+    font-size: 1.5rem;
+    padding: 1rem;
+    border: 1px solid $white;
+  }
+
+  &__item {
+    display: flex;
+  }
+
+  &__sub {
+    opacity: 0.5;
+    border-left: 1px solid $white;
+    padding: 0 1rem;
+  }
+
+  &__challenge {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__term {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.test {
+  display: flex;
+  justify-content: center;
+
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 3rem;
+    border: 1px solid rgb(55 55 55);
+    background: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(0.4rem);
+    -webkit-backdrop-filter: blur(0.4rem);
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__sub {
+    opacity: 0.5;
+    border-left: 1px solid $white;
+    padding: 0 1rem;
+    margin: 0;
+  }
+
   &__text {
-    font-size: 1.6rem;
-    font-weight: lighter;
-    color: $primary-text;
-    margin-bottom: 2rem;
+  }
+
+  &__copy {
+    opacity: 0.5;
+    border-left: 1px solid $white;
+    padding: 0 1rem;
   }
 }
 
