--- a/src/pages/AboutPage/AboutPage.scss
+++ b/src/pages/AboutPage/AboutPage.scss
@@ -6,6 +6,7 @@
   color: $primary-text;
   margin: 0 4rem;
   gap: 2rem;
+  margin-bottom: 2rem;
 
   &__titles {
     display: flex;
@@ -89,8 +90,8 @@
     padding: 1rem 3rem;
     border: 1px solid rgb(55 55 55);
     background: rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(0.4rem);
-    -webkit-backdrop-filter: blur(0.4rem);
+    backdrop-filter: blur(0.75rem);
+    -webkit-backdrop-filter: blur(0.75rem);
   }
 
   &__item {
@@ -111,46 +112,6 @@
   }
 
   &__copy {
-    opacity: 0.5;
-    border-left: 1px solid $white;
-    padding: 0 1rem;
-  }
-}
-
-.more {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 30vh;
-  border: 1px solid rgb(55 55 55);
-  background: rgba(0, 0, 0, 0.25);
-  backdrop-filter: blur(0.4rem);
-  -webkit-backdrop-filter: blur(0.4rem);
-
-  &__title {
-    padding: 0.5rem 1rem;
-    margin: 1.5rem 0;
-    border-left: 1px solid $white;
-  }
-
-  &__loader {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 2rem;
-  }
-
-  &__wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  &__item {
-    display: flex;
-  }
-
-  &__sub {
     opacity: 0.5;
     border-left: 1px solid $white;
     padding: 0 1rem;
