--- a/src/pages/ContractPage/ContractPage.scss
+++ b/src/pages/ContractPage/ContractPage.scss
@@ -3,8 +3,10 @@
 
 .gem {
   position: fixed;
-  left: 146rem;
-  top: -28rem;
+  left: 155rem;
+  top: -26rem;
+  height: 60rem;
+  width: 60rem;
   z-index: -1;
   transform: rotate(90deg);
   filter: blur(0rem) grayscale(100%);
@@ -12,8 +14,8 @@
 
 .core {
   position: fixed;
-  top: 22rem;
-  left: -67rem;
+  top: 32rem;
+  left: -57rem;
   z-index: -1;
   transform: rotate(90deg);
 }
