--- a/src/pages/AboutPage/AboutPage.scss
+++ b/src/pages/AboutPage/AboutPage.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   color: $primary-text;
   margin: 0 4rem;
-  gap: 2rem;
+  gap: 3rem;
   margin-bottom: 2rem;
 
   &__ball {
@@ -61,6 +61,30 @@
     display: flex;
     gap: 2rem;
     border-bottom: 1px solid $white;
+  }
+
+  &__subtitle--github {
+    transition: all 0.3s linear;
+    &:hover {
+      background-color: $primary-text;
+      color: $primary-background;
+    }
+  }
+
+  &__link {
+    text-decoration: none;
+    color: $primary-text;
+  }
+
+  &__desc {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    padding: 0 2rem;
+    border: 1px solid rgb(55 55 55);
+    background: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(1rem);
   }
 
   &__tech {
